# EduSocratic

./: .gitignore  CLAUDE.md  LICENSE  README.md  doc-content-final.md  doc-content-v2.md  doc-content.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: webhook.py
app/api/v1/: router.py  webhooks.py
app/domain/: constants.py  grade_weights.py  schemas.py
app/domain/grading/: dimensions.py  engine.py  prompt_manager.py
app/infrastructure/asr/: base.py
app/infrastructure/feishu/: card_builder.py  event_handler.py
app/infrastructure/llm/: base.py  circuit_breaker.py
app/infrastructure/storage/: oss.py  postgres.py
app/models/: __init__.py
app/prompts/: __init__.py  assessment_1_2.py  assessment_3_4.py  assessment_5_7.py  repair.py
app/services/: llm_service.py
app/tasks/: __init__.py
app/utils/: text_parser.py
config/: base.yaml  secret.env.example
docs/: 业务文档.md  迭代文档.md
edusocratic-feishu/: .gitignore  README.md  doc-latest.md  doc-to-upload.md  docker-compose.yml
edusocratic-feishu/app/: config.py  main.py
edusocratic-feishu/app/api/v1/: assessment.py  reports.py
edusocratic-feishu/app/middleware/: error_handler.py  logging.py
edusocratic-feishu/app/tasks/: assessment.py  report.py
edusocratic-feishu/config/: production.yaml
edusocratic-feishu/prompts/v1.0/: format_repair.md
edusocratic-feishu/tests/: conftest.py
edusocratic-feishu/tests/unit/: test_dimensions.py
prompts/v1.0/: assessment_1_2.md  assessment_3_4.md  assessment_5_7.md
tests/: test_domain.py  test_llm_service.py  test_webhook.py
(+6 files in other folders)
