[project]
name = "edusocratic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "lark-oapi>=1.0.0",
    "httpx>=0.24.0",
]

# dev 依赖放 dependency-groups 而非 optional-dependencies：
# uv sync / uv run pytest 默认安装 dev 组，验收命令无需额外加 --extra dev
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

# 本项目是应用而非可安装的库，不需要构建/安装自身
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 保证 uv run pytest 在任意 cwd 下都能 import app.*
pythonpath = ["."]

[tool.ruff]
line-length = 100
